objects/TASKRAY__trTaskTime__c.object
<CustomObject>
    <description>This is an object used to track time on a TaskRay Task.</description>
    <fields>
        <fullName>Billed_Amount__c</fullName>
        <formula>Billing_Rate__c *  TASKRAY__Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <label>Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Time object billable?</description>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Date__c</fullName>
        <description>The date of the Time entry</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Holds the number of hours for a Time object.</description>
        <label>Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>TaskRay Time</relationshipLabel>
        <relationshipName>TaskRay_Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Task__c</fullName>
        <inlineHelpText>Task that Time object is related to.</inlineHelpText>
        <label>TaskRay Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Time</relationshipLabel>
        <relationshipName>TaskRay_Time</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMyTimeEntry__c</fullName>
        <formula>TASKRAY__Owner__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My TaskRay Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectIdFormula__c</fullName>
        <formula>TASKRAY__Task__r.TASKRAY__Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskGroupIdFormula__c</fullName>
        <formula>TASKRAY__Task__r.TASKRAY__trTaskGroup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Group ID Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimeType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Must Configure Values for Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimerEnd__c</fullName>
        <inlineHelpText>Used for the Timer functionality in TaskRay.</inlineHelpText>
        <label>Timer End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimerStart__c</fullName>
        <inlineHelpText>Used for the Timer functionality in TaskRay.</inlineHelpText>
        <label>Timer Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUnsavedTimeEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for the Timer functionality in TaskRay.</inlineHelpText>
        <label>Unsaved Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Time</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>TaskRay Time</label>
    <listViews>
        <fullName>TASKRAY__AllTimeThisWeek</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Task__c</columns>
        <columns>TASKRAY__Date__c</columns>
        <columns>TASKRAY__Hours__c</columns>
        <columns>TASKRAY__Billable__c</columns>
        <columns>TASKRAY__Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All Time (This Week)</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__MyTimeThisWeek</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Task__c</columns>
        <columns>TASKRAY__Date__c</columns>
        <columns>TASKRAY__Hours__c</columns>
        <columns>TASKRAY__Billable__c</columns>
        <columns>TASKRAY__Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>TASKRAY__trIsMyTimeEntry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Time (This Week)</label>
    </listViews>
    <nameField>
        <displayFormat>TIME-{0}</displayFormat>
        <label>Time Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaskRay Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>